extends Node2D

signal touchedFromControl

# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.

#RÃ©-Envoie le signal de chaque slim vers Player2:
func _on_Slime_touched():
	emit_signal("touchedFromControl")
func _on_Slime2_touched():
	emit_signal("touchedFromControl")
func _on_Slime3_touched():
	emit_signal("touchedFromControl")
func _on_Slime4_touched():
	emit_signal("touchedFromControl")
func _on_Slime5_touched():
	emit_signal("touchedFromControl")
func _on_Slime6_touched():
	emit_signal("touchedFromControl")
func _on_Slime7_touched():
	emit_signal("touchedFromControl")
func _on_Slime8_touched():
	emit_signal("touchedFromControl")
func _on_Slime9_touched():
	emit_signal("touchedFromControl")
func _on_Slime10_touched():
	emit_signal("touchedFromControl")
func _on_Slime11_touched():
	emit_signal("touchedFromControl")
func _on_Slime12_touched():
	emit_signal("touchedFromControl")
func _on_Slime13_touched():
	emit_signal("touchedFromControl")
func _on_Slime14_touched():
	emit_signal("touchedFromControl")
func _on_Slime15_touched():
	emit_signal("touchedFromControl")
func _on_Slime16_touched():
	emit_signal("touchedFromControl")
func _on_Slime17_touched():
	emit_signal("touchedFromControl")
func _on_Slime18_touched():
	emit_signal("touchedFromControl")